--- a/options/TPU_paired-data.yml
+++ b/options/TPU_paired-data.yml
@@ -6,8 +6,8 @@ num_gpu: 1
 manual_seed: 0
 
 # USM the ground-truth
-l1_gt_usm: True
-percep_gt_usm: True
+l1_gt_usm: False
+percep_gt_usm: False
 gan_gt_usm: False
 
 high_order_degradation: False # do not use the high-order degradation generation process
